# DataMind

./: GETTING_STARTED.md  README.md  README_zh.md  pyproject.toml
.github/release-notes/: v0.3.0.md
.github/workflows/: python-publish.yml
datamind/: __init__.py  config.py  server.py
datamind/agent/: loop_native.py  loop_sdk.py  options.py
datamind/capabilities/hooks/: __init__.py  audit.py  destructive_sql.py  path_allowlist.py
datamind/core/: hooks.py
datamind/scripts/: hello_hooks.py
datamind/tests/: test_hooks.py
static/: app.html
